--- a/static/css/features.css
+++ b/static/css/features.css
@@ -119,7 +119,7 @@
     }
     .features-container {
         flex-direction: column-reverse;
-        padding: 70px 18px 35px; /* ~10% Reduced */
+        padding: 60px 18px 35px; /* ~10% Reduced */
         align-items: center;
     }
     .features-left, .features-right {
@@ -128,7 +128,7 @@
     .feature-box {
         width: 100%;
         padding: 27px 18px; /* Reduced */
-        margin-bottom: 25px; /* Reduced */
+        margin-bottom: 35px; /* Reduced */
         text-align: center;
         mask-image: none;
         -webkit-mask-image: none;
