--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,6 +18,8 @@
 .hero-section::before {
     content: "";
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.55);
